Add new format AsciiDoc, by @aisbergde @gsantner closes #808 (PR #1876)

--- a/app/src/main/res/menu/document__edit__menu.xml
+++ b/app/src/main/res/menu/document__edit__menu.xml
@@ -153,6 +153,10 @@
                             android:icon="@drawable/ic_file_white_24dp"
                             android:title="@string/plaintext" />
                         <item
+                            android:id="@string/action_format_asciidoc"
+                            android:icon="@drawable/asciidoc_icon_black_24dp"
+                            android:title="@string/asciidoc" />
+                        <item
                             android:id="@string/action_format_markdown"
                             android:icon="@drawable/gs_markdown_black_24dp"
                             android:title="@string/markdown" />
