--- a/app/src/main/res/xml/preferences_master.xml
+++ b/app/src/main/res/xml/preferences_master.xml
@@ -609,7 +609,7 @@
     <!-- Most important settings -->
     <PreferenceCategory android:title="@string/essential">
         <ListPreference
-            android:defaultValue="@string/app_theme_auto"
+            android:defaultValue="@string/app_theme_system"
             android:dialogTitle="@string/theme"
             android:entries="@array/pref_arrdisp__app_themes"
             android:entryValues="@array/pref_arrkeys__app_themes"
