--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -103,6 +103,7 @@
         <item translatable="false">@string/todo_txt</item>
         <item translatable="false">@string/wikitext</item>
         <item translatable="false">@string/asciidoc</item>
+        <item translatable="false">@string/csvtext</item>
         <item translatable="false">@string/none</item>
     </string-array>
 
@@ -118,6 +119,7 @@
         <item translatable="false">@string/file_template__md_hugo_post_front_matter</item>
         <item translatable="false">@string/file_template__md_zettelkasten</item>
         <item translatable="false">@string/file_template__ad_jekyll_post</item>
+        <item translatable="false">@string/file_template__csv_sample</item>
     </string-array>
 
     <string-array name="new_file_types__file_extension" translatable="false">
@@ -126,6 +128,7 @@
         <item translatable="false">.todo.txt</item>
         <item translatable="false">.txt</item>
         <item translatable="false">.adoc</item>
+        <item translatable="false">.csv</item>
         <item translatable="false" />
     </string-array>
 
