File Info Dialog: Add Mime-Type, by @gsantner

--- a/app/src/main/res/layout/file_info_dialog.xml
+++ b/app/src/main/res/layout/file_info_dialog.xml
@@ -113,6 +113,25 @@
                 android:layout_gravity="center_vertical"
                 android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                 tools:text="859KB (81234 Bytes)" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:layout_marginTop="16dp"
+                android:ellipsize="end"
+                android:lines="1"
+                android:text="@string/mime_type"
+                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/ui__fileinfodialog__mimetype_description"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
+                tools:text="text/plain" />
         </LinearLayout>
 
         <LinearLayout
